Profile, About, Experience section done

--- a/index.html
+++ b/index.html
@@ -40,6 +40,152 @@
         </div>
       </div>
     </nav>
+    <section id="profile">
+        <div class="section__pic-container">
+            <img src="assets/download1.png" alt="profile picture">
+        </div>
+        <div class="section__text">
+            <p class="section__text__p1">Hello, I'm</p>
+            <h1 class="title">Sabarivishnu</h1>
+            <p class="section__text__p2">Developer</p>
+            <div class="btn-container">
+                <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
+                <button class="btn btn-color-1" onclick="location.href='./#contact'">Connect</button>
+            </div>
+            <div id="socials-container">
+                        <img src="./assets/linkedin.png" alt="linkedin profile" class="icon" onclick="location.href='https://linkedin.com/in/sabarivishnu-balakrishnan-9a3235309/'">
+                        <img src="./assets/github.png" alt="github profile" class="icon" onclick="location.href='https://github.com/sabarivishnu26'">
+            </div>
+        </div>
+    </section>
+    <section id="about">
+        <p class="section__text__p1">Get To Know More</p>
+        <h1 class="title">About Me</h1>
+        <div class="section-container">
+            <div class="section__pic-container">
+                <img class="about-pic" src="./assets/WhatsApp Image 2025-06-12 at 19.47.11.jpeg" alt="profile pic">
+            </div>
+            <div class="about-detail-container">
+                <div class="about-container">
+                    <div class="detail-container">
+                        <img class="icon" src="/assets/experience.png" alt="Experience icon">
+                        <h3>Experience</h3>
+                        <p>2+ years<br />Frontend Development</p>
+                    </div>
+                    <div class="detail-container">
+                        <img class="icon" src="/assets/education.png" alt="Experience icon">
+                        <h3>Education</h3>
+                        <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+                    </div>
+                </div>
+                <div class="text-container">
+                    I'm a passionate and curious tech enthusiast with experience in web development, cloud computing, and machine learning. I build full-stack applications using Flask and Django, backed by MySQL or MongoDB, and I'm comfortable working with tools like Selenium and Git. Recently, I’ve been exploring AWS and Google Cloud, working on projects like thumbnail generation using Cloud Functions and data pipelines.
+                </div>
+            </div>
+        </div>
+        <img src="/assets/arrow.png" class="icon arrow" onclick="location.href='./#experience'" alt="arrow go down"/>
+    </section>
+    <section id="experience">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="about-container">
+            <div class="detail-container">
+                <h2 class="experience-sub-title">Frontend Development</h2>
+                <div class="article-container">
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>HTML</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>CSS</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>JavaScript</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>React</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>Bootstrap</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>Tailwind CSS</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+            <div class="detail-container">
+                <h2 class="experience-sub-title">Backend Development</h2>
+                <div class="article-container">
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>Flask</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>Django</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>Node js</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>Express js</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>Mysql</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="./assets/checkmark.png" alt="experience icon" class="icon">
+                        <div>
+                            <h3>Mango DB</h3>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </div>
+        <img src="/assets/arrow.png" class="icon arrow" onclick="location.href='./#projects'" alt="arrow go down">
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
