Project, contact, footer all done

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="detail-container">
                         <img class="icon" src="/assets/education.png" alt="Experience icon">
                         <h3>Education</h3>
-                        <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+                        <p>B.Tech Bachelors Degree<br />Computer Communication Engineering</p>
                     </div>
                 </div>
                 <div class="text-container">
@@ -186,6 +186,69 @@
         </div>
         <img src="/assets/arrow.png" class="icon arrow" onclick="location.href='./#projects'" alt="arrow go down">
     </section>
+    <section id="projects">
+        <p class="section__text__p1">Browse My Recent</p>
+        <h1 class="title">Projects</h1>
+        <div class="experience-details-container">
+            <div class="about-container">
+                <div class="detail-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/png-expense-management.png" alt="project 1" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"  onclick="location.href='https://github.com'">Github</button>
+                    </div>
+                </div>    
+                <div class="detail-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/png-expense-management.png" alt="project 2" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project Two</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"  onclick="location.href='https://github.com'">Github</button>
+                    </div>
+                </div>
+                <div class="detail-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/png-expense-management.png" alt="project 3" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project Three</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn"  onclick="location.href='https://github.com'">Github</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <img src="/assets/arrow.png" class="icon arrow" onclick="location.href='./#projects'" alt="arrow go down">
+    </section>
+    <section id="contact">
+        <p class="section__text__p1">Get in Touch</p>
+        <h1 class="title">Contact Me</h1>
+        <div class="contact-info-upper-container">
+            <div class="contact-info-container">
+                <img src="./assets/email.png" alt="email icon" class="icon contact-icon email-icon">
+                <p><a href="mailto:sabarivishnu26@gmail.com">sabarivishnu26@gmail.com</a></p>
+            </div>
+            <div class="contact-info-container">
+                <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon">
+                <p><a href="https://www.linkedin.com/in/sabarivishnu-balakrishnan-9a3235309/">LinkedIn</a></p>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <nav>
+            <div class="nav-links-container">
+                <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#project">Project</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            </div>
+        </nav>
+        <p>Copyright &#169; 2025 Sabarivishnu. All Rights Reserved.</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
